gl31-master/src/test/deca/syntax/valid/complet/complex_meth.deca
// Description:
//    tests de programme correct syntaxiquement pour complet
//
// Resultats:
//    Succes attendu
//
// Historique:
//    cree le 18/01/2021
class Test{
    protected float f;
    
    void toString(int i){
        if(i < 0){
            printlnx(f);
        }
        else if(i == 0){
            print("nul");
        }
        else{
            println(f);
        }
    }
}
