gl31-master/src/test/deca/syntax/invalid/complet/no_type.deca
// Description:
//    tests de programme incorrect syntaxiquement pour complet
//
// Resultats:
//    Ligne 10 : Erreur, type manquant
//
// Historique:
//    cree le 19/01/2021
class Test{
    protected a;
}
